<resources>

    <!--General-->
    <string name="date_format">%02d/%02d/%d</string>
    <string name="app_name">Integração Finder</string>
    <string name="address_or_postal_code">Endereço ou CEP</string>
    <string name="postal_code_example">Ex.: 99999–999</string>
    <string name="week_days">Dias da semana</string>
    <string name="monday">Segunda-Feira</string>
    <string name="tuesday">Terça-Feira</string>
    <string name="wednesday">Quarta-Feira</string>
    <string name="thursday">Quinta-Feira</string>
    <string name="friday">Sexta-Feira</string>
    <string name="saturday">Sábado</string>
    <string name="time">Horário</string>
    <string name="select_time">Selecione o horário</string>
    <string name="tag">Categoria</string>
    <string name="select_tag">Selecione o categoria</string>
    <string name="search">Buscar</string>
    <string name="create">Criar</string>
    <string name="point_distance">(aprox. %.1f %s)</string>
    <string name="point_weekday_time">%s às %d:%02d</string>
    <string name="searching">Buscando…</string>
    <string name="no_points">Nenhuma célula encontrada</string>
    <string name="search_input">%s: %s</string>
    <string name="point_name">Nome da célula</string>
    <string name="leader_name">Nome do Líder</string>
    <string name="leader_phone">Contatos</string>
    <string name="title_activity_point_map">PointMapActivity</string>
    <string name="set_point_location"><u>Confirmar localização</u></string>
    <string name="edit_point_location">Editar localização da célula</string>
    <string name="hour_format">%02d:%02d</string>
    <string name="street_or_road">Rua ou Estrada</string>
    <string name="invalid_postal_code">CEP inválido</string>
    <string name="out_of_order_title">Manutenção!</string>
    <string name="out_of_order_message">O Finder está em manutenção!</string>
    <string name="add_new_contact">Adicionar novo contato</string>
    <string name="remove">Remover</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="unknown">Desconhecido</string>
    <string name="contact_name_gender_display">%s (%s)</string>
    <string name="point_state_active">Ativo</string>
    <string name="point_state_inactive">Inativo</string>
    <string name="point_state_suspended">Suspenso</string>
    <string name="point_state_unknown">Desconhecido</string>
    <string name="back">Voltar</string>
    <string name="search_address_or_postal_code_not_found">Endereço ou CEP não encontrado.</string>

    <!--Detail-->

    <string name="detail_point_name">Nome da Célula</string>
    <string name="detail_point_tag">Categoria</string>
    <string name="detail_point_leader_name">Nome da Líder</string>
    <string name="detail_point_contacts">Contatos</string>
    <string name="detail_week_day">Dia da Semana</string>
    <string name="detail_hour">Horário</string>
    <string name="detail_address">Endereço</string>
    <string name="detail_sector">Setor</string>
    <string name="detail_hour_format">%02d:%02d</string>
    <string name="detail_contact_name">Nome do contato</string>
    <string name="detail_edit_point">Editar</string>
    <string name="detail_last_update">Última atualização: %s %s</string>
    <string name="detail_toast_copy_phone">Telefone de %s copiado!</string>
    <string name="point_exclusion_confirmation">Confirmação</string>
    <string name="point_exclusion_confirmation_message">Tem certeza que deseja excluir a célula %1$s</string>
    <string name="point_exclusion_action">Excluir</string>
    <string name="point_change_state">Tornando %1$s como \'%2$s\'</string>
    
    <string name="search_no_results_title">Nenhum resultado</string>
    <string name="search_no_results_description">Vish… com base nos parâmetros de busca, não encontramos nenhuma célula.</string>
    <string name="search_no_results_action">Voltar</string>

    <string name="search_error_title">Erro inesperado</string>
    <string name="search_error_description">Aconteceu um erro que não estávamos esperando, poderia reportar isso aos adminstradores?</string>
    <string name="search_error_action">Tentar novamente</string>

    <string name="search_no_address_or_postal_code_title">Endereço, referência ou CEP não encontrado</string>
    <string name="search_no_address_or_postal_code_description">Vish… o endereço, referência ou CEP inserido parece inválido.</string>
    <string name="search_no_address_or_postal_code_action">Voltar</string>

    <string name="profile_logout">Sair</string>
    <string name="created_at">Criado em %s</string>
    <string name="dmy_date_format">%02d/%02d/%d</string>
    <string name="hm_date_format">%02d:%02d</string>
    <string name="last_update_at">Última atualização em %s às %s</string>
    <string name="need_to_be_logged">É necessário estar logado para usar o app</string>
    <string name="unknown_error">Erro desconhecido</string>
    <string name="unknown_error_description">Ocorreu um erro e não foi possível identificá-lo. Relate ao administrador.</string>
    <string name="unhandled_error">Erro sem tratativa</string>
    <string name="invalid_credentials">Credenciais inválidas</string>
    <string name="searching_user_data">Buscando informações do usuário…</string>
    <string name="searching_postal_code_data">Buscando informações do CEP…</string>
    <string name="searching_point_data">Buscando informações das células…</string>
    <string name="deleting_point">Deletando célula…</string>
    <string name="point_deletion">Exclusão de Célula</string>
    <string name="point_deletion_confirmation">Tem certeza que deseja excluir esta Célula?</string>
    <string name="delete">Excluir</string>
    <string name="do_not_delete">Não Excluir</string>
    <string name="finder">Finder</string>
    <string name="location">Integração - Campo Grande</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="access">Acessar</string>
    <string name="register_account_has_lowercase_letter">Contém letra minuscula</string>
    <string name="register_account_has_uppercase_letter">Contém letra maiúscula</string>
    <string name="register_account_has_numbers">Contém número</string>
    <string name="register_account_has_symbol">Contém símbolo</string>
    <string name="register_account_confirmed_password">Senha confirmada</string>
    <string name="confirm">Confirmar</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register_account_min_chars">Mínimo de 8 caracteres</string>
    <string name="register_account">Não tenho conta</string>
    <string name="profile_change_name">Alterar nome</string>
    <string name="profile_change_email">Alterar email</string>
    <string name="profile_change_password">Alterar senha</string>
    <string name="profile_see_users">Ver usuários</string>
    <string name="register_account_current_password">Senha atual</string>
    <string name="users_manager_disable_user">Desativar usuário</string>
    <string name="users_manager_enable_user">Ativar usuário</string>
    <string name="users_manager_cannot_delete_active_user">Não é possível excluir um usuário ativo</string>
    <string name="users_manager_delete_user">Excluir usuário</string>
    <string name="users_manager_accept">Aceitar</string>
    <string name="users_manager_not_accepted">Não Aceito</string>
    <string name="users_manager_accepted">Aceito</string>
    <string name="users_manager_verified">Verificado</string>
    <string name="users_manager_not_verified">Não verificado</string>
</resources>