<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_enable_disable_user"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/users_manager_disable_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_cannot_delete_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:text="@string/users_manager_cannot_delete_active_user"
        app:drawableStartCompat="@drawable/baseline_block_24"
        app:drawableTint="?attr/colorOnSurface" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_user"
        android:enabled="false"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/users_manager_delete_user" />

</androidx.appcompat.widget.LinearLayoutCompat>